# atemr_tools

./: .gitignore  .gitmodules  LICENSE  README.md
imu_tools-noetic/imu_filter_madgwick/launch/: imu_filter_madgwick.launch
map_server/src/: main.cpp
reactive_base/: CMakeLists.txt  package.xml
reactive_base/fuzzylite/: fuzzylite  libfuzzylite.so.6.0
reactive_base/fuzzylite/logic/: linearSteering.fll  manualDriveSteering.fll  manualDriveSteering_90.fll  reactiveSteering.fll  reactiveSteering_90.fll
reactive_base/include/reactive_base/: reactivebase.h
reactive_base/launch/: reactivebase.launch
reactive_base/src/: reactivebase.cpp  reactivebase_node.cpp
realsense-ros/realsense2_camera/launch/: rs_d415.launch
realsense-ros/realsense2_description/launch/: view_d415_model.launch
realsense-ros/realsense2_description/urdf/: test_d415_camera.urdf.xacro
rplidar_ros/launch/: rplidar.launch
rplidar_ros/src/: node.cpp
scan_processor/: CMakeLists.txt  package.xml
scan_processor/include/scan_processor/: scanprocessor.h
scan_processor/launch/: scan_processor.launch
scan_processor/src/: scan_processor_node.cpp  scanprocessor.cpp
wit_node/include/wit_node/: wit_ros.hpp
wit_node/launch/: wit.launch
wit_node/src/ros/: wit_ros.cpp
wt901_imu/: CMakeLists.txt  package.xml
wt901_imu/scripts/: create_udev_rules.sh  delete_udev_rules.sh  wt901_imu.rules  wt901_imu_I2C.py  wt901_imu_serial.py  wt901_serial_demo.py
wt901_imu/src/: demo.cpp  wt901ROS.cpp
