<?xml version="1.0"?>
<package format="2">
  <name>reactive_base</name>
  <version>0.0.0</version>
  <description>The reactive base package</description>
  <maintainer email="leocorp96@gmail.com">ephson</maintainer>
  <license>MIT</license>
  <author email="leocorp96@gmail.com">ephson</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>atemr_msgs</build_depend>
  <exec_depend>atemr_msgs</exec_depend>
  <build_depend>atemr_dbus</build_depend>
  <exec_depend>atemr_dbus</exec_depend>
  <build_depend>roslib</build_depend>
  <exec_depend>roslib</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
